--- a/TodoListWPF/App.xaml
+++ b/TodoListWPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TodoListWPF"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Login.xaml">
     <Application.Resources>
 
         <Style x:Key="buttons" TargetType="Button">
@@ -34,6 +34,16 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        
+        <Style x:Key="window" TargetType="Window">
+            <Setter Property="Height" Value="450"/>
+            <Setter Property="Width" Value="800"/>
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="AllowsTransparency" Value="True"/>
+            <Setter Property="WindowStyle" Value="None"/>
+
+
+
+
+        </Style>
     </Application.Resources>
 </Application>
